# timetracker

./: .augment-guidelines  .gitignore  LICENSE  README.md  timetracker.sln  timetracker_performance_report_20250525_140328.json  timetracker_performance_report_20250525_141631.json
.github/workflows/: ci.yml
WindowHookTest/: Program.cs  README.md
app/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ApiService.cpp  ApiService.h  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  IdleAnnotationDialog.cpp  IdleAnnotationDialog.h  IdleDetector.cpp  IdleDetector.h  QT_PLATFORM_PLUGIN_TROUBLESHOOTING.md  RUN_TESTS.vcxproj  TimeTrackerApp.sln  TimeTrackerApp.vcxproj  TimeTrackerApp.vcxproj.filters  TimeTrackerLib.vcxproj  TimeTrackerLib.vcxproj.filters  TimeTrackerMainWindow.cpp  TimeTrackerMainWindow.h  TimeTrackerTests.vcxproj  TimeTrackerTests.vcxproj.filters  TimeTrackerTests[1]_include.cmake  TimeTrackerTests[1]_tests.cmake  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  activity_log.txt  clear-qt-env.ps1  fix-qt-platform-plugins.ps1  fix-qt-plugins.bat  main.cpp  run-timetracker-admin.ps1  run_tests.vcxproj.filters  test-idle-detection.bat  vcpkg.json
app/TimeTrackerLib_autogen/: mocs_compilation_Debug.cpp
app/TimeTrackerLib_autogen/include_Debug/EWIEGA46WW/: moc_ApiService.cpp.d  moc_IdleAnnotationDialog.cpp.d  moc_IdleDetector.cpp.d  moc_TimeTrackerMainWindow.cpp.d
app/docs/: gtest1-sprint-completion-summary.md
app/tests/: ActivityLogging_test.cpp  ApiService_minimal_test.cpp  ApiService_test.cpp  IdleAnnotationDialog_test.cpp  IdleDetector_test.cpp  ScreenshotCapture_test.cpp  TimeTrackerMainWindow_test.cpp  main_test.cpp  test_utils.h
backend/: create-s3-buckets.py  docker-compose.yml  test-s3-direct.py  test-screenshot.py
backend/TimeTracker.API/: Program.cs  TimeTracker.API.csproj  TimeTracker.API.http  appsettings.Development.json  appsettings.json
backend/TimeTracker.API.Tests/: TimeTracker.API.Tests.csproj  UnitTest1.cs
backend/TimeTracker.API.Tests/Controllers/: IdleTimeControllerTests.cs
backend/TimeTracker.API.Tests/Models/: IdleSessionTests.cs
backend/TimeTracker.API/Controllers/: TrackingDataController.cs
backend/TimeTracker.API/Data/: TimeTrackerDbContext.cs
backend/TimeTracker.API/Migrations/: 20250615104704_InitialCreate.Designer.cs  20250615104704_InitialCreate.cs  20250615135955_AddIdleSessionTable.Designer.cs  20250615135955_AddIdleSessionTable.cs  TimeTrackerDbContextModelSnapshot.cs
backend/TimeTracker.API/Models/: ActivityLog.cs  IdleSession.cs  Screenshot.cs
backend/TimeTracker.API/Properties/: launchSettings.json
backend/TimeTracker.API/Services/: S3Service.cs
desktop-app/: DEPLOYMENT.md  INSTALLATION_COMPLETE.md  PERFORMANCE_IMPROVEMENTS.md  SQLSERVER_MIGRATION_SUMMARY.md  TimeTracker.sln  build-installer-simple.ps1  build-installer.ps1  check-status.ps1  diagnose-service-enhanced.ps1  diagnose-service.ps1  install-and-test-service.ps1  install-service-direct.ps1  install-service-user-fixed.bat  install-service.ps1  remove-service.ps1  run-timetracker.ps1  test-service-manual.ps1  test-service-startup.ps1  test-syntax.ps1
desktop-app/TimeTracker.DesktopApp/: ActivityDataModel.cs  ActivityLogger.cs  BackgroundTaskQueue.cs  BatchProcessor.cs  ConfigurationManager.cs  GlobalHookInputMonitor.cs  HeartbeatService.cs  InputEvent.cs  InputMonitor.cs  MainForm.cs  NativeMethods.cs  OptimizedInputMonitor.cs  OptimizedSQLiteDataAccess.cs  OptimizedWindowMonitor.cs  PipedreamClient.cs  Program.cs  SQLiteDataAccess.cs  SessionMonitor.cs  SettingsForm.cs  SqlServerDataAccess.cs  StatusOverlayForm.cs  TestForm.cs  TimeTracker.DesktopApp.csproj  TrayIconManager.cs  WindowMonitor.cs  app.manifest  appsettings.json  test-functionality.ps1
desktop-app/TimeTracker.DesktopApp.IntegrationTests/: SQLiteDataAccessIntegrationTests.cs  TimeTracker.DesktopApp.IntegrationTests.csproj  UnitTest1.cs
desktop-app/TimeTracker.DesktopApp.Tests/: ActivityDataModelTests.cs  ActivityLoggerTests.cs  BackgroundTaskQueueTests.cs  InputMonitorTests.cs  OptimizedMonitorsIntegrationTests.cs  OptimizedSQLiteDataAccessTests.cs  Phase12OptimizationIntegrationTests.cs  PipedreamClientSimpleTests.cs  PipedreamClientTests.cs  SQLiteDataAccessTests.cs  SqlServerDataAccessTests.cs  TimeTracker.DesktopApp.Tests.csproj  WindowMonitorTests.cs
desktop-app/TimeTracker.DesktopApp.Tests/TestHelpers/: TestConfiguration.cs
desktop-app/TimeTracker.DesktopApp/Interfaces/: IDataAccess.cs  IInputMonitor.cs  IPipedreamClient.cs  IWindowMonitor.cs
desktop-app/TimeTracker.DesktopApp/Logging/: FileLoggerProvider.cs
desktop-app/TimeTracker.Installer/: Product.wxs  README.md  TimeTrackerInstaller.wixproj
docs/: 2025-06-14 prd.md  Implementation Guide for Employee Activity Monitor.md  Implementing a Complete Testing Infrastructure in.md  PRD-2.md  Performance Optimization for Time Tracking Applica.md  Sprint1.md  Sprint2.md  TimeTracker Desktop Service Code Analysis_ Service(1).md  TimeTracker Desktop Service Code Analysis_ Service.md  desktop.md  performance-testing-guide.md  phase 1.md  phase 2.md  phase-1-2-upload.md  phase-1-optimise.md  phase-1-optimization-summary.md  phase-1.2-optimise.md  phase-1.md  phase-2-roadmap.md  phase-3-sprint1.md  prd0.md  prd1.md  s2g.md  s4g.md  s5g.md  s6g.md  s8g.md  sprint 6.md  sprint0.md  sprint1g.md  sprint3-implementation-review.md  sprint4.md  sprint5.md  sprint8.md  testing-guide.md
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/app/: app.component.ts
